--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@layerborn/cdk-git-tagger",
+  "name": "@jjrawlins/cdk-git-tagger",
   "description": "CDK Aspect to tag resources with git metadata.  This provides a nice connection between the construct and the git repository.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/layerborn/cdk-git-tagger-aspect.git"
+    "url": "https://github.com/jjrawlins/cdk-git-tagger.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -35,39 +35,52 @@
     "organization": false
   },
   "devDependencies": {
+    "@stylistic/eslint-plugin": "^2",
     "@types/jest": "^29.5.12",
     "@types/mock-fs": "^4.13.4",
-    "@types/node": "^18",
-    "@typescript-eslint/eslint-plugin": "^6",
-    "@typescript-eslint/parser": "^6",
-    "aws-cdk-lib": "2.30.0",
-    "constructs": "10.0.5",
-    "eslint": "^8",
+    "@types/node": "^20",
+    "@typescript-eslint/eslint-plugin": "^8",
+    "@typescript-eslint/parser": "^8",
+    "aws-cdk": "2.99.0",
+    "aws-cdk-lib": "2.99.0",
+    "commit-and-tag-version": "^12",
+    "eslint": "^9",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-import": "^2.29.1",
     "jest": "^29.7.0",
-    "jest-junit": "^15",
-    "jsii": "~5.0.0",
+    "jest-junit": "^16",
+    "jsii": "~5.7.0",
     "jsii-diff": "^1.97.0",
-    "jsii-docgen": "^9.2.2",
+    "jsii-docgen": "^10.5.0",
     "jsii-pacmak": "^1.97.0",
-    "jsii-rosetta": "~5.0.0",
-    "mock-fs": "^5.2.0",
-    "projen": "^0.81.5",
-    "standard-version": "^9",
+    "jsii-rosetta": "~5.7.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.30.0",
-    "constructs": "^10.0.5"
+    "aws-cdk-lib": "^2.99.0",
+    "constructs": "^10.4.2"
   },
+  "dependencies": {
+    "aws-cdk": "2.99.0",
+    "aws-cdk-lib": "2.99.0",
+    "constructs": "10.4.2",
+    "mock-fs": "^5.4.1",
+    "projen": "^0.91.6"
+  },
+  "bundledDependencies": [
+    "mock-fs"
+  ],
   "keywords": [
-    "cdk"
+    "cdk",
+    "git",
+    "metadata",
+    "tag",
+    "tagger"
   ],
   "engines": {
-    "node": ">= 18.0.0"
+    "node": ">= 20.0.0"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
@@ -76,9 +89,22 @@
   },
   "version": "0.0.0",
   "jest": {
+    "coverageProvider": "v8",
+    "moduleNameMapper": {
+      "^aws-cdk-lib/(.*)$": "<rootDir>/node_modules/aws-cdk-lib/$1"
+    },
+    "moduleDirectories": [
+      "node_modules"
+    ],
+    "testEnvironment": "node",
+    "transformIgnorePatterns": [
+      "node_modules/(?!(aws-cdk-lib)/)"
+    ],
     "testMatch": [
-      "<rootDir>/src/**/__tests__/**/*.ts?(x)",
-      "<rootDir>/(test|src)/**/*(*.)@(spec|test).ts?(x)"
+      "<rootDir>/@(src|test)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(src|test)/**/__tests__/**/*.ts?(x)",
+      "<rootDir>/@(projenrc)/**/*(*.)@(spec|test).ts?(x)",
+      "<rootDir>/@(projenrc)/**/__tests__/**/*.ts?(x)"
     ],
     "clearMocks": true,
     "collectCoverage": true,
@@ -123,11 +149,11 @@
     "outdir": "dist",
     "targets": {
       "python": {
-        "distName": "layerborn.cdk-git-tagger",
-        "module": "layerborn.cdk_git_tagger"
+        "distName": "jjrawlins.cdk-git-tagger",
+        "module": "jjrawlins.cdk_git_tagger"
       },
       "go": {
-        "moduleName": "github.com/layerborn/cdk-git-tagger-aspect"
+        "moduleName": "github.com/jjrawlins/cdk-git-tagger"
       }
     },
     "tsc": {
