--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "description": "CDK Aspect to tag resources with git metadata.  This provides a nice connection between the construct and the git repository.",
   "repository": {
     "type": "git",
-    "url": "https://github.com/jjrawlins/cdk-git-tagger.git"
+    "url": "https://github.com/JaysonRawlins/cdk-git-tagger.git"
   },
   "scripts": {
     "build": "npx projen build",
@@ -21,11 +21,13 @@
     "package:js": "npx projen package:js",
     "package:python": "npx projen package:python",
     "post-compile": "npx projen post-compile",
+    "post-upgrade": "npx projen post-upgrade",
     "pre-compile": "npx projen pre-compile",
     "release": "npx projen release",
     "test": "npx projen test",
     "test:watch": "npx projen test:watch",
     "unbump": "npx projen unbump",
+    "upgrade": "npx projen upgrade",
     "watch": "npx projen watch",
     "projen": "npx projen"
   },
@@ -38,7 +40,7 @@
     "@stylistic/eslint-plugin": "^2",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.12",
-    "@types/node": "^20",
+    "@types/node": "^22",
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
     "aws-cdk": "2.150.0",
@@ -50,11 +52,11 @@
     "glob": "^11.0.1",
     "jest": "^29.7.0",
     "jest-junit": "^16",
-    "jsii": "~5.5.0",
+    "jsii": "~5.8.0",
     "jsii-diff": "^1.97.0",
     "jsii-docgen": "^10.5.0",
     "jsii-pacmak": "^1.97.0",
-    "jsii-rosetta": "~5.5.0",
+    "jsii-rosetta": "~5.8.0",
     "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
@@ -69,6 +71,9 @@
     "projen": "^0.91.6"
   },
   "resolutions": {
+    "brace-expansion": "1.1.12",
+    "form-data": "^4.0.4",
+    "@eslint/plugin-kit": "^0.3.4",
     "constructs": "10.4.2"
   },
   "keywords": [
@@ -79,7 +84,7 @@
     "tagger"
   ],
   "engines": {
-    "node": ">= 20.9.0"
+    "node": ">= 22.x"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
@@ -152,7 +157,8 @@
         "module": "jjrawlins_cdk_git_tagger"
       },
       "go": {
-        "moduleName": "github.com/jjrawlins/cdk-git-tagger"
+        "moduleName": "github.com/JaysonRawlins/cdk-git-tagger",
+        "packageName": "cdk-git-tagger"
       }
     },
     "tsc": {
