--- a/.mergify.yml
+++ b/.mergify.yml
@@ -5,6 +5,8 @@ queue_rules:
       - label = automerge
       - -label~=(do-not-merge)
       - status-success=build
+      - -author=dependabot[bot]
+      - -author=projenbuildmanager[bot]
     merge_method: squash
     commit_message_template: |-
       {{ title }} (#{{ number }})
@@ -20,15 +22,6 @@ pull_request_rules:
     actions:
       merge:
         method: squash
-      delete_head_branch: {}
-  - name: Automatic merge
-    description: Merge when PR passes all branch protection and has label automerge
-    conditions:
-      - label = automerge
-    actions:
-      merge:
-        method: squash
-      delete_head_branch: {}
   - name: Label conflicting pull requests
     description: Add a label to a pull request with conflict to spot it easily
     conditions:
@@ -46,7 +39,6 @@ pull_request_rules:
     actions:
       merge:
         method: squash
-      delete_head_branch: {}
   - name: Auto-merge dependency upgrade PRs CDK Stacks
     conditions:
       - head=github-actions/upgrade
@@ -55,17 +47,13 @@ pull_request_rules:
     actions:
       merge:
         method: squash
-      delete_head_branch: {}
-  - name: Automatic merge on approval and successful build
-    actions:
-      delete_head_branch: {}
-      queue:
-        name: default
-      merge:
-        method: squash
+  - name: Queue PRs with automerge label
     conditions:
       - label = automerge
       - -label~=(do-not-merge)
       - status-success=build
+    actions:
+      queue:
+        name: default
 merge_queue:
   max_parallel_checks: 1
