--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "constructs": "^10.4.2"
   },
   "dependencies": {
-    "constructs": "10.4.2",
+    "constructs": "^10.4.2",
     "projen": "^0.96.1"
   },
   "resolutions": {
