chore(deps): update Node.js and AWS CDK versions; add .tool-versions file

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "eslint": "npx projen eslint",
     "package": "npx projen package",
     "package-all": "npx projen package-all",
+    "package:dotnet": "npx projen package:dotnet",
     "package:go": "npx projen package:go",
     "package:js": "npx projen package:js",
     "package:python": "npx projen package:python",
@@ -40,11 +41,11 @@
     "@stylistic/eslint-plugin": "^2",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
-    "@types/node": "^22",
+    "@types/node": "^20",
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
     "aws-cdk": "2.1029.2",
-    "aws-cdk-lib": "2.150.0",
+    "aws-cdk-lib": "2.85.0",
     "commit-and-tag-version": "^12",
     "eslint": "^9",
     "eslint-import-resolver-typescript": "^3.10.1",
@@ -63,8 +64,8 @@
     "typescript": "^5.9.2"
   },
   "peerDependencies": {
-    "aws-cdk-lib": "^2.150.0",
-    "constructs": "^10.4.2"
+    "aws-cdk-lib": "^2.85.0",
+    "constructs": "^10.0.5"
   },
   "dependencies": {
     "constructs": "^10.4.2",
@@ -74,8 +75,8 @@
     "brace-expansion": "1.1.12",
     "form-data": "^4.0.4",
     "@eslint/plugin-kit": "^0.3.4",
-    "constructs": "10.4.2",
-    "aws-cdk-lib": "2.150.0"
+    "aws-cdk-lib": ">=2.85.0 <3.0.0",
+    "constructs": ">=10.0.0 <11.0.0"
   },
   "keywords": [
     "cdk",
@@ -85,7 +86,7 @@
     "tagger"
   ],
   "engines": {
-    "node": ">= 22.x"
+    "node": ">= 20.9.0"
   },
   "main": "lib/index.js",
   "license": "Apache-2.0",
@@ -156,6 +157,10 @@
       "python": {
         "distName": "jjrawlins-cdk-git-tagger",
         "module": "jjrawlins_cdk_git_tagger"
+      },
+      "dotnet": {
+        "namespace": "jjrawlins.CdkGitTagger",
+        "packageId": "jjrawlins.CdkGitTagger"
       },
       "go": {
         "moduleName": "github.com/JaysonRawlins/cdk-git-tagger",
