--- a/.projen/tasks.json
+++ b/.projen/tasks.json
@@ -312,13 +312,13 @@
       },
       "steps": [
         {
-          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@types/fs-extra,@types/jest,aws-cdk,eslint-import-resolver-typescript,eslint-plugin-import,fs-extra,glob,jest,jsii-diff,jsii-pacmak,ts-jest,ts-node,typescript,constructs,projen"
+          "exec": "npx npm-check-updates@16 --upgrade --target=minor --peer --no-deprecated --dep=dev,peer,prod,optional --filter=@types/fs-extra,@types/jest,aws-cdk,eslint-import-resolver-typescript,eslint-plugin-import,fs-extra,glob,jest,jsii-diff,jsii-pacmak,projen,ts-jest,ts-node,typescript,constructs"
         },
         {
           "exec": "yarn install --check-files"
         },
         {
-          "exec": "yarn upgrade @stylistic/eslint-plugin @types/fs-extra @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk aws-cdk-lib commit-and-tag-version eslint-import-resolver-typescript eslint-plugin-import eslint fs-extra glob jest jest-junit jsii-diff jsii-docgen jsii-pacmak jsii-rosetta jsii ts-jest ts-node typescript constructs projen"
+          "exec": "yarn upgrade @stylistic/eslint-plugin @types/fs-extra @types/jest @types/node @typescript-eslint/eslint-plugin @typescript-eslint/parser aws-cdk aws-cdk-lib commit-and-tag-version eslint-import-resolver-typescript eslint-plugin-import eslint fs-extra glob jest jest-junit jsii-diff jsii-docgen jsii-pacmak jsii-rosetta jsii projen ts-jest ts-node typescript constructs"
         },
         {
           "exec": "npx projen"
