--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "jsii-docgen": "^10.5.0",
     "jsii-pacmak": "^1.114.1",
     "jsii-rosetta": "~5.8.0",
+    "projen": "^0.96.3",
     "ts-jest": "^29.4.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.2"
@@ -68,15 +69,14 @@
     "constructs": "^10.0.5"
   },
   "dependencies": {
-    "constructs": "^10.4.2",
-    "projen": "^0.96.3"
+    "constructs": "^10.4.2"
   },
   "resolutions": {
     "brace-expansion": "1.1.12",
     "form-data": "^4.0.4",
     "@eslint/plugin-kit": "^0.3.4",
     "aws-cdk-lib": ">=2.85.0 <3.0.0",
-    "constructs": ">=10.0.0 <11.0.0"
+    "constructs": ">=10.0.5 <11.0.0"
   },
   "keywords": [
     "cdk",
@@ -159,8 +159,8 @@
         "module": "jjrawlins_cdk_git_tagger"
       },
       "dotnet": {
-        "namespace": "jjrawlins.CdkGitTagger",
-        "packageId": "jjrawlins.CdkGitTagger"
+        "namespace": "JJRawlins.CdkGitTagger",
+        "packageId": "JJRawlins.CdkGitTagger"
       },
       "go": {
         "moduleName": "github.com/JaysonRawlins/cdk-git-tagger",
