--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "@stylistic/eslint-plugin": "^2",
     "@types/fs-extra": "^11.0.4",
     "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.20",
     "@types/node": "^20",
     "@typescript-eslint/eslint-plugin": "^8",
     "@typescript-eslint/parser": "^8",
-    "aws-cdk": "2.1031.0",
+    "aws-cdk": "2.1029.2",
     "aws-cdk-lib": "2.85.0",
     "commit-and-tag-version": "^12",
+    "constructs": "10.0.5",
     "eslint": "^9",
     "eslint-import-resolver-typescript": "^3.10.1",
     "eslint-plugin-import": "^2.32.0",
@@ -59,24 +61,22 @@
     "jsii-docgen": "^10.5.0",
     "jsii-pacmak": "^1.117.0",
     "jsii-rosetta": "~5.8.0",
-    "projen": "^0.98.5",
+    "projen": "^0.95.6",
     "ts-jest": "^29.4.5",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3"
   },
   "peerDependencies": {
     "aws-cdk-lib": "^2.85.0",
-    "constructs": "^10.0.5"
-  },
-  "dependencies": {
-    "constructs": "^10.4.2"
+    "constructs": ">=10.0.5 <11.0.0"
   },
   "resolutions": {
     "brace-expansion": "1.1.12",
     "form-data": "^4.0.4",
     "@eslint/plugin-kit": "^0.3.4",
     "aws-cdk-lib": ">=2.85.0 <3.0.0",
-    "constructs": ">=10.0.5 <11.0.0"
+    "constructs": "10.0.5",
+    "projen": ">=0.95.6 <1.0.0"
   },
   "keywords": [
     "cdk",
